--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <!-- p5 sound (THIS IS THE MISSING PIECE) -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/addons/p5.sound.min.js"></script>
 
+    <!-- Proton.js (optional experiment). If it fails to load, sketch runs normally. -->
+    <script src="lib/proton.min.js"></script>
+
     <!-- your sketch -->
     <script src="sketch.js"></script>
   </head>
